tests/lean/423.lean.expected.out
423.lean:3:39-3:40: error: type mismatch
  0
has type
  Nat : Type
but is expected to have type
  T : Sort u
423.lean:5:33-5:38: error: application type mismatch
  Add T
argument
  T
has type
  Sort u : Type u
but is expected to have type
  Type ?u : Type (?u + 1)
423.lean:5:41-5:50: error: application type mismatch
  OfNat T
argument
  T
has type
  Sort u : Type u
but is expected to have type
  Type ?u : Type (?u + 1)
423.lean:5:59-5:60: error: type mismatch
  0
has type
  Nat : Type
but is expected to have type
  T : Sort u
